Preparazione al deploy